k8s/product-fe-cluster-ip.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-fe
spec:
  selector:
    app: product-fe
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
