k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-product-application
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /api/product
            pathType: Prefix
            backend:
                service:
                    name: product-service
                    port:
                      number: 8080
          - path: /
            pathType: Prefix
            backend:
                service:
                    name: product-fe
                    port:
                      number: 80
